# cardfolio-2.0

./: .gitignore  ROADMAP.txt  RULES.txt  docker-compose.yml  pyproject.toml  stage 0 roadmap.txt
.github/workflows/: ci.yml
api/: __init__.py
api/alembic/: README.md
api/app/: __init__.py  database.py  main.py  models.py  storage.py
api/app/routers/: products.py
api/app/schemas/: products.py
api/tests/: test_search_performance.py
data-pipeline/collectors/: README.md
data-pipeline/collectors/ebay/: __init__.py
data-pipeline/collectors/pricecharting/: __init__.py
data-pipeline/jobs/: __init__.py
data-pipeline/tests/: __init__.py
scripts/: load_seed_data.py
warehouse/dbt/: README.md
warehouse/ddl/: 00_catalog.sql  README.md
warehouse/seeds/: 01_sample_products.sql  README.md
web/app/: page.tsx
